# visual-behavior-los-ultramarinos

./: .CMakeLists.txt.swp  .nfs000000000c28651700000146  CMakeLists.txt  README.md  package.xml
include/: CPidController.h  CRobotMove.h  CSensors.h  Controlador.hpp  PIDController.hpp
include/visual_behavior/: Controlador.hpp  PIDController.hpp
launch/: follow_ball.launch  follow_ball_person.launch  follow_person .launch  follow_person.launch  prueba.launch
msg/: PolarPoint.msg  RobotData.msg
src/: CPidController.cpp  CRobotMove.cpp  CSensors.cpp  Control.cpp  Controlador.cpp  Coordinador.cpp  ObservadorPelotas.cpp  ObservadorPelotasHSV.cpp  ObservadorPersonas.cpp  PIDController.cpp  main.cpp  nodo_camera_vb.cpp
src/visual_behavior/: Controlador.cpp  PIDController.cpp  nodo_camera.cpp
tests/: testsControl.cpp
